[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Skeleton_03"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymongo",
    "python-dotenv",
    "requests",
    "requests-ip-rotator",
]

[tool.setuptools]
packages = ["Skeleton_03"]

[tool.setuptools.package-dir]
"Skeleton_03" = ""
